--- a/Рандомный_фон_при_клике.html
+++ b/Рандомный_фон_при_клике.html
@@ -37,12 +37,16 @@
                 line-height: 1;
                 color: black;
             }
+            .jjj {
+                display: none;
+            }
         </style>
     </head>
     <body>
         <div id="button_container">
             <a id="button" href="javascript:void(0);" rollapp-href="javascript:void(0);">Click me!</a>
         </div>
+        <div class="jjj"><p>05.08.16 checked.</p></div>
 
 
 
