--- a/мигание.html
+++ b/мигание.html
@@ -1,7 +1,9 @@
 <!DOCTYPE html>
 <head>
 
-    <script src="jquery.min.js" type="text/javascript"></script>
+    <!--<script src="jquery.min.js" type="text/javascript"></script>-->
+     <script src="https://code.jquery.com/jquery-2.2.3.js"></script>
+
     <script>
         var objData = {
             n : 5,
