--- a/project/index.html
+++ b/project/index.html
@@ -444,7 +444,7 @@
        <img alt="" src="images/how-we-work3.png">
       </div>
       <!-- /.img -->
-      <p>
+      <p class="correction">
        Отправляем вам заказ почтой или курьером
       </p>
      </div>
