--- a/project/index.html
+++ b/project/index.html
@@ -45,7 +45,7 @@
        </li>
       </ul>
      </nav>
-     <!-- /#nav -->
+     <!-- /#nav/ -->
      <span class="js-menu-btn">
       <span>
       </span>
